--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-icons": "^4.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-spinkit": "^3.0.0",
     "sweetalert2": "^11.1.0",
     "web-vitals": "^1.1.2",
