--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.7.0",
@@ -19,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.1",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
